# coar

./: CoAR.opam  README.md
lib/PCSat/synthesis/: solutionTemplate.ml
lib/PCSat/template/: generator.ml  predicateDNF.ml
lib/PCSat/validation/: validator.ml
lib/Z3Smt/: z3interface.ml
lib/muCLP/: optimizer.ml
lib/pCSP/: problem.mli
