opam-version: "2.0"
name: "CoAR"
version: "2.0"
maintainer: "Hiroshi Unno <uhiro@cs.tsukuba.ac.jp>"
authors: "Hiroshi Unno <uhiro@cs.tsukuba.ac.jp>"
homepage: "https://github.com/hiroshi-unno/coar"
bug-reports: "https://github.com/hiroshi-unno/coar/issues"
synopsis: "Collection of Automated Reasoners"
description: ""
pin-depends: [
  ["libsvm.0.10.0~modified" "git+https://github.com/hiroshi-unno/libsvm-ocaml.git"]
]
depends: [
  "dune" {= "3.11.1"}
  "ocaml" {= "5.0.0"}
  "core" {= "v0.15.1"}
  "core_unix"
  "domainslib"
  "menhir"
  "ppx_deriving_yojson"
  "ocaml-compiler-libs"
  "ocamlgraph"
  "zarith" {>= "1.9"}
  "z3" {>= "4.11.2"}
  "minisat"
  "libsvm" {= "0.10.0~modified"}
]
build: ["dune" "build"]
